<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home"
            />

        <item
            android:id="@+id/nav_disclaimer"
            android:icon="@drawable/about"
            android:title="@string/disclaimer"
            />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/my_account"
            />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"
            />

        <item
            android:id="@+id/nav_workload_assessment"
            android:icon="@drawable/ic_baseline_assessment_24"
            android:title="@string/workload_assessment_tool" />

        <item
            android:title="@string/dashboard">
            <menu>
                <item
                    android:id="@+id/nav_analysis"
                    android:icon="@drawable/ic_being_sick"
                    android:title="@string/weekly_admission_summary" />
                <item android:id="@+id/nav_vital_signs"
                    android:icon="@drawable/ic_pulse"
                    android:title="@string/daily_monitoring_of_vitals" />
                <item android:id="@+id/nav_severe_illness"
                    android:icon="@drawable/ic_health_data"
                    android:title="@string/prevelance_of_severe_illness" />
                <item android:id="@+id/nav_severe_illness_mgt"
                    android:icon="@drawable/ic_pharmacist"
                    android:title="@string/management_of_severe_illness" />
                <item android:id="@+id/nav_patient_outcomes"
                    android:icon="@drawable/ic_out_patient_department"
                    android:title="@string/patient_outcomes" />
            </menu>
        </item>


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/log_out"
            />

    </group>

</menu>