<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/systolic_blood_pressure" />

            <EditText
                android:id="@+id/systolic_bp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diastolic_blood_pressure" />

            <EditText
                android:id="@+id/diastolic_bp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_rate" />

            <EditText
                android:id="@+id/heart_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respiratory_rate" />

            <EditText
                android:id="@+id/resp_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_celsius" />

            <EditText
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oxygen_saturation" />

            <EditText
                android:id="@+id/oxygen_saturation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avpu_scale" />

            <EditText
                android:id="@+id/avpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_when_vitals_taken" />

            <EditText
                android:id="@+id/timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/update_vitals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg_2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="edit_vitals"
        android:textSize="18sp"
        android:text="Update Vitals"
        android:textColor="@color/white" />
</LinearLayout>