<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    tools:context=".users.CreateUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_first_name"
                />

            <EditText
                android:id="@+id/user_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_last_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phone_number"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email_address"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_username"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textVisiblePassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_secret_pin"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_secret_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="numberPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:text="Is this user an admin" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/is_user_admin_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="Yes" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/register_patient"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_margin="20dp"
        android:padding="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg_2"
        android:onClick="registerUser"
        android:text="@string/action_save_user"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>