<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".users.ViewUserDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/nav_below"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/user_info_text"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:text="@string/my_patients"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:text="@string/you_have_no_assigned_patients"
            android:visibility="gone"
            android:id="@+id/no_assigned_patients"
            android:textSize="15sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_patients"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/nav_below"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/edit"
            android:id="@+id/edit_user"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/delete"
            android:id="@+id/delete_user"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>